# lrl-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_ETHICS.md  GOVERNANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
docs/: architecture.md
examples/: lrl_colab.ipynb  smoke.yaml  welsh-colab.yaml
notebooks/: lrl_colab.ipynb
projects/: kurmanji.yaml  quick-30min.yaml  welsh-colab.yaml
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
site/src/components/: Features.astro  Footer.astro  Hero.astro  Languages.astro  Nav.astro  Pipeline.astro  Quickstart.astro
site/src/data/: languages.json
site/src/pages/: index.astro
site/src/styles/: global.css
src/lrl_toolkit/: __init__.py  cli.py  config.py  corpus.py  licensing.py  manifest.py  modeling.py  scaffold.py
src/lrl_toolkit/clean/: __init__.py  dedup.py  filters.py  langid.py  normalize.py  pii.py
src/lrl_toolkit/configs/compute/: a100.yaml  cluster.yaml  colab_t4.yaml  consumer_gpu.yaml
src/lrl_toolkit/configs/languages/: amharic.yaml  basque.yaml  breton.yaml  cornish.yaml  faroese.yaml  farsi.yaml  galician.yaml  guarani.yaml  haitian_creole.yaml  hausa.yaml  igbo.yaml  irish.yaml  khmer.yaml  kurmanji.yaml  luxembourgish.yaml  maltese.yaml  maori.yaml  mongolian.yaml  nepali.yaml  occitan.yaml  pashto.yaml  quechua.yaml  scottish_gaelic.yaml  sinhala.yaml  somali.yaml  sorani.yaml  swahili.yaml  tibetan.yaml  uyghur.yaml  welsh.yaml  xhosa.yaml  yoruba.yaml  zulu.yaml
src/lrl_toolkit/configs/models/: aya-23-8b.yaml  aya-expanse-8b.yaml  bloomz-1b7.yaml  gemma2-2b.yaml  gemma2-9b.yaml  llama3.1-8b.yaml  llama3.2-1b.yaml  llama3.2-3b.yaml  mistral-7b-v0.3.yaml  phi-3.5-mini.yaml  qwen2.5-0.5b.yaml  qwen2.5-1.5b.yaml  qwen2.5-3b.yaml  qwen2.5-7b.yaml  qwen3-1.7b.yaml  qwen3-4b.yaml  smollm2-1.7b.yaml  smollm2-135m.yaml  smollm2-360m.yaml  tinyllama-1.1b.yaml  xlmr-base.yaml
src/lrl_toolkit/convdata/: __init__.py  instruction_sets.py  review.py  schema.py  teacher.py  translators.py
src/lrl_toolkit/evaluate/: __init__.py  human_review.py  metrics.py
src/lrl_toolkit/evaluate/benchmarks/: __init__.py  base.py  belebele.py  flores_chrf.py  global_mmlu.py  judge.py  native_cloze.py  perplexity.py  registry.py
src/lrl_toolkit/export/: __init__.py
src/lrl_toolkit/finetune/: __init__.py  train.py
src/lrl_toolkit/ingest/: __init__.py  base.py  registry.py
src/lrl_toolkit/ingest/connectors/: __init__.py  commoncrawl.py  flores.py  hf_stream.py  local.py  madlad.py  opus.py  smol.py
src/lrl_toolkit/pipeline/: __init__.py  base.py  orchestrator.py
src/lrl_toolkit/pretrain/: __init__.py  embed_init.py  train.py
src/lrl_toolkit/registry/: __init__.py  loader.py  profiles.py
src/lrl_toolkit/tokenizer/: __init__.py  extend.py
src/lrl_toolkit/utils/: __init__.py  io.py  logging.py
tests/: conftest.py  test_clean_units.py  test_config.py  test_convdata.py  test_dashboard.py  test_evaluate_benchmarks.py  test_ingest.py  test_licensing.py  test_pipeline.py  test_registry.py  test_scaffold.py  test_train.py
